--- a/Layout.css
+++ b/Layout.css
@@ -112,7 +112,7 @@ ul.topnav {
     margin: .5;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: white;
 	max-width: 100%;
 }
 
@@ -122,7 +122,7 @@ ul.topnav li {float: left;}
 /* Style the links inside the list items */
 ul.topnav li a {
     display: inline-block;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -131,7 +131,8 @@ ul.topnav li a {
 }
 
 /* Change background color of links on hover */
-ul.topnav li a:hover {background-color: #555;}
+ul.topnav li a:hover {background-color: #555;
+color: #fff;}
 
 /* Hide the list item that contains the link that should open and close the topnav on small screens */
 ul.topnav li.icon {display: none;}
@@ -182,7 +183,7 @@ button:active,{
   text-shadow: -1px 1px #193047;
 }
 
-footer {
+.footer {
   position: fixed;
   bottom: 0;
   left: 0;
