--- a/Layout.css
+++ b/Layout.css
@@ -116,6 +116,12 @@ ul.topnav {
 	max-width: 100%;
 }
 
+.webpageBanner{
+	display: block;
+	margin: 0 auto; 
+	
+}
+
 /* Float the list items side by side */
 ul.topnav li {float: left;}
 
@@ -190,7 +196,60 @@ button:active,{
   height: 70px;
   background-color: white;
   width: 100%;
+  z-index: 5;
 }
 
+}
+/* STUFF FOR SLIDESHOW */
+
+	#pictures {
+	position: absolute;
+	max-width: 50%;
+		/* height: 100 px; */
+	/*	padding: 0 px; */
+		list-style-type: none;
+	}
+	
+	.picture {
+        position: absolute;
+	/* 	left: 0 px;
+	*/	top: 2 px;
+/* 		width: 100 px;
+		height: 100 px; */
+		opacity: 0;
+		z-index: 1;
+	display: block;
+	padding-left: 400px;
+	margin: 0 auto;
+ /* 	
+		max-height = 10%;
+		max-width = 10%; */
+/* 
+		box-sizing: borderbox; */
+		
+		-webkit-transiton: opacity 1s;
+		-moz-transition: opacity 1s;
+		-o-transition: opacity 1s;
+		transition: opacity 1s;
+	}
+	
+	.showing{
+		opacity: 1;
+		z-index: 2;
+	}
+	
+	.card {
+    max-width: 50%;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+	float: left;
+}
+
+.card:hover {
+    box-shadow: 0 72px 144px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
 }
 
