Added the title tab icon to each page

--- a/Layout.css
+++ b/Layout.css
@@ -20,6 +20,12 @@ body{
  -add three hours 10/6
 */
 
+.topNavBackgroundVersion{
+	
+	background-image: url("..\Images\backgroundImage.jpg");
+	
+}
+
 
 .site-header {
 	
@@ -112,8 +118,14 @@ ul.topnav {
     margin: .5;
     padding: 0;
     overflow: hidden;
-    background-color: white;
+    background-image: url("..\Images\backgroundImage.jpg");
+	background-color: white;
+	
 	max-width: 100%;
+}
+
+ul.topNavBackgroundVersion{
+	
 }
 
 .webpageBanner{
